--- a/src/Articulate/App_Plugins/Articulate/Views/MarkdownEditor.cshtml
+++ b/src/Articulate/App_Plugins/Articulate/Views/MarkdownEditor.cshtml
@@ -1,5 +1,5 @@
-@addTagHelper *, Smidge
-@inject Smidge.SmidgeHelper SmidgeHelper
+@addTagHelper *
+
 @using Articulate.Controllers
 
 @model global::Articulate.Models.MarkdownEditorInitModel
@@ -7,9 +7,6 @@
 @{
     Layout = null;
 
-    SmidgeHelper
-        .RequiresJs("~/App_Plugins/Articulate/Assets/md-editor.js")
-        .RequiresCss("~/App_Plugins/Articulate/Assets/md-editor.css");
 }
 
 <!DOCTYPE html>
@@ -23,8 +20,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    @* Smidge CSS Bundle (Only a single file for now) *@
-    @await SmidgeHelper.CssHereAsync()
+    <link href="~/App_Plugins/Articulate/Assets/md-editor.css" rel="stylesheet"/>
 
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
@@ -33,8 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular-route.min.js" type="text/javascript"></script>
 
-    @* Smidge JS Bundle (Only a single file for now) *@
-    @await SmidgeHelper.JsHereAsync()
+    <script src="~/App_Plugins/Articulate/Assets/md-editor.js" async="" type="text/javascript"></script>
 
 
     <script type="text/ng-template" id="md.html">
@@ -156,7 +151,7 @@
 
             <div class="mdl-card mdl-shadow--2dp">
                 <div class="mdl-card__supporting-text">
-                    
+
                     <div ng-if="!result" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
 
                     <h3 ng-if="result">
