--- a/src/Articulate.Tests.Website/Views/_ViewImports.cshtml
+++ b/src/Articulate.Tests.Website/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using Umbraco.Extensions
-@using Articulate.Tests.Website
 @using Umbraco.Cms.Web.Common.PublishedModels
 @using Umbraco.Cms.Web.Common.Views
+@using Umbraco.Cms.Core.Models.PublishedContent
+@using Microsoft.AspNetCore.Html
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
