--- a/src/Articulate/Client/public/assets/themes.css
+++ b/src/Articulate/Client/public/assets/themes.css
@@ -3,7 +3,7 @@
   height: 100px;
   background-color: transparent;
   background-repeat: no-repeat;
-  background-size: auto 100px
+ background-size: auto 100px;
 }
 .articulate-theme-Material {
   background-image: url(theme-material.png);
@@ -19,6 +19,7 @@
 }
 
 .umb-package-link.selected {
+  border-style: solid;
   border-color: #2152a3;
   border-width: 2px;
 }
