--- a/src/Articulate/App_Plugins/Articulate/Themes/VAPOR/Assets/css/screen.css
+++ b/src/Articulate/App_Plugins/Articulate/Themes/VAPOR/Assets/css/screen.css
@@ -607,6 +607,13 @@ ul.recent-posts li {
     clear: both;
 }
 
+p.text-danger
+{
+    color: #e74c3c;
+    font-weight: 600;
+
+}
+
 /* === Media Queries === */
 @media only screen and (min-width: 320px) and (max-width: 500px) {
   footer section span.copyright {
