Deprecate front end Markdown Editor route
Deprecated for now.

  - Back office should be responsive enough?
  - No known viable alternative for client side markdown editor that requires back office authorization.
  - A server rendered Blazor editor using OIDC / Client credentials is one possible future alternative?

--- a/src/Articulate/App_Plugins/Articulate/xLegacy/Views/MarkdownEditor.cshtml
+++ b/src/Articulate/App_Plugins/Articulate/xLegacy/Views/MarkdownEditor.cshtml
@@ -1,3 +1,5 @@
+@*TODO: Deprecated for now. See the comment in the MarkdownEditorController.cs file*@
+
 @addTagHelper *, Smidge
 @inject Smidge.SmidgeHelper SmidgeHelper
 @using Articulate.Controllers
@@ -156,7 +158,7 @@
 
             <div class="mdl-card mdl-shadow--2dp">
                 <div class="mdl-card__supporting-text">
-                    
+
                     <div ng-if="!result" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
 
                     <h3 ng-if="result">
