Current work in progress - nearly there
Pushing to prevent loss - wip
- Swagger API documentation
- BackOffice Client QA
- Deprecate front end mobile markdown editor for now

--- a/src/Articulate/App_Plugins/Articulate/Themes/Material/Views/Partials/TitleTile.cshtml
+++ b/src/Articulate/App_Plugins/Articulate/Themes/Material/Views/Partials/TitleTile.cshtml
@@ -1,4 +1,4 @@
-@using Articulate
+@* @using Articulate
 @using Articulate.Models
 @using Microsoft.AspNetCore.Authentication.Cookies
 @using Microsoft.Extensions.Options
@@ -43,3 +43,4 @@
         @await Html.ThemedPartialAsync(Model, "Menu", Model)
     </div>
 </div>
+ *@
