deprecate TitleTile.html in material theme (a-new route widget)

--- a/src/Articulate/App_Plugins/Articulate/Themes/Material/Views/Tags.cshtml
+++ b/src/Articulate/App_Plugins/Articulate/Themes/Material/Views/Tags.cshtml
@@ -47,7 +47,8 @@
         </div>
     </div>
 
-    @await Html.ThemedPartialAsync(Model, "TitleTile")
+    @* Deprecated a-new widget *@
+    @* @await Html.ThemedPartialAsync(Model, "TitleTile") *@
 
     @for (var i = 0; i < asArray.Length; i++)
     {
