--- a/src/Articulate/App_Plugins/Articulate/Themes/Material/Views/List.cshtml
+++ b/src/Articulate/App_Plugins/Articulate/Themes/Material/Views/List.cshtml
@@ -44,7 +44,8 @@
                     @{await PostInfo(post, false);}
                 </div>
 
-                @await Html.ThemedPartialAsync(Model, "TitleTile")
+                @* Deprecated a-new widget *@
+                @* @await Html.ThemedPartialAsync(Model, "TitleTile") *@
 	}
             else
             {
