--- a/src/Articulate/App_Plugins/Articulate/Themes/Material/Views/Partials/TitleTile.cshtml
+++ b/src/Articulate/App_Plugins/Articulate/Themes/Material/Views/Partials/TitleTile.cshtml
@@ -1,4 +1,6 @@
-@using Articulate
+@* Deprecated a-new widget *@
+
+@* @using Articulate
 @using Articulate.Models
 @using Microsoft.AspNetCore.Authentication.Cookies
 @using Microsoft.Extensions.Options
@@ -26,7 +28,7 @@
 
     @if (backOfficeLogggedIn)
     {
-        <a href="@Url.ArticulateCreateBlogEntryUrl(Model)" rel="nofollow" title="Create new blog post"
+         <a href="@Url.ArticulateCreateBlogEntryUrl(Model)" rel="nofollow" title="Create new blog post"
            class="new-post mdl-button mdl-js-ripple-effect mdl-js-button mdl-button--fab mdl-color--primary">
             <i class="material-icons mdl-color-text--white" role="presentation">add</i>
             <span class="visuallyhidden">add</span>
@@ -43,3 +45,5 @@
         @await Html.ThemedPartialAsync(Model, "Menu", Model)
     </div>
 </div>
+
+ *@
